feat(api):  response time for supported methods (#8)
* upsert response time for rpc.peers_methods; use in api

* fix .env.example

* fixes after merge
