# swagger/swagger.yaml
@@ -96,13 +96,15 @@ components:
         supported_methods:
           type: array
           items:
-            type: string
-            example: [getMultipleAccounts, getSignatureStatuses]
-        unscanned_methods:
-          type: array
-          items:
-            type: string
-            example: [getMultipleAccounts, getSignatureStatuses]
+            type: object
+            properties:
+              name:
+                type: string
+                example: getSignatureStatuses
+              response_time:
+                type: integer
+                example: 1000
+                description: in milliseconds
         is_rpc:
           type: boolean
         asn_info:
@@ -129,5 +131,3 @@ components:
                 name:
                   type: string
                   example: United States
-        scan_time:
-          type: integer
